--- a/좋은-코드를-위한-노력.md
+++ b/좋은-코드를-위한-노력.md
@@ -1,3 +1,3 @@
 이 부분은 좀 더 논의가 필요한 부분입니다.
 
-여유가 된다면 작성해 보도록 하겠습니다. 그전까지 프론트엔드는 [링크](https://frontend-fundamentals.com/code-quality/)를 참조해 주세요
+여유가 된다면 작성해 보도록 하겠습니다. 그전까지 프론트엔드는 [링크](https://frontend-fundamentals.com/code-quality/)를 참고해 주세요
